cmake_minimum_required(VERSION 3.12)
project(Homework_8)

set(CMAKE_CXX_STANDARD 14)

add_executable(Homework_8 main_Zekun.cpp Shape_Zekun.cpp Shape_Zekun.h TwoDimensionalShape_Zekun.cpp TwoDimensionalShape_Zekun.h Circle_Zekun.cpp Circle_Zekun.h Triangle_Zekun.cpp Triangle_Zekun.h Sphere_Zekun.cpp Sphere_Zekun.h ThreeDimensionalShape_Zekun.cpp ThreeDimensionalShape_Zekun.h RegularTetrahedron_Zekun.cpp RegularTetrahedron_Zekun.h)